# trader

./: .gitignore  Dockerfile  README.md  docker-compose.yml  genetic.py  pyproject.toml  redeploy.sh
asm/: example.asm
cpp/: main.cpp
js/: collector.js  package-lock.json  package.json
kube/trader/: deployment.yaml
resources/: template.yaml
trader/: logs.py  model.py  server.py  util.py
trader/app/: core.py
trader/db/: factory.py  poordis.py
trader/model/: Config.py
trader/strategy/: base.py  chad.py  dipper.py  factory.py  smartyolo.py  yolo.py
